--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -5,13 +5,17 @@
         <span class="fast-flicker">S</span> tor <span class="flicker">e</span> <span class="fast-flicker">G</span>a<span class="flicker">m</span>e
       </div>
       <div class="store d-flex flex-column gap-4 mt-4">
-        <div class="tiktactoe d-flex justify-content-start align-items-center gap-3 p-2 rounded-3" routerLink="/tiktactoe">
-          <img src="./assets/images/logoImage/tikLogo.png" class="rounded-2" alt="">
-          <h2>Tik Tac Toe</h2>
+        <div class="games d-flex justify-content-start align-items-center gap-3 p-2 rounded-3" routerLink="/guessword">
+          <img src="./assets/images/logoImage/guesswords.jpeg" class="rounded-2" alt="">
+          <h2>Guess The Words</h2>
         </div>
-        <div class="tiktactoe d-flex justify-content-start align-items-center gap-3 p-2 rounded-3" routerLink="/memorygame">
+        <div class="games d-flex justify-content-start align-items-center gap-3 p-2 rounded-3" routerLink="/memorygame">
           <img src="./assets/images/logoImage/memoryLogo.jpeg" class="rounded-2" alt="">
           <h2>Memory Game</h2>
+        </div>
+        <div class="games d-flex justify-content-start align-items-center gap-3 p-2 rounded-3" routerLink="/tiktactoe">
+          <img src="./assets/images/logoImage/tikLogo.png" class="rounded-2" alt="">
+          <h2>Tik Tac Toe</h2>
         </div>
       </div>
     </div>
