--- a/src/app/components/home/home.component.scss
+++ b/src/app/components/home/home.component.scss
@@ -189,7 +189,7 @@ section{
   }
 }
 
-.tiktactoe, .memoryGame{
+.games{
   box-shadow: 0 0 8px 8px #ffffffa4;
   backdrop-filter: blur(20px);
   cursor: pointer;
@@ -199,7 +199,7 @@ section{
   }
 }
 @media (min-width:992px) {
-  .tiktactoe, .memoryGame{
+  .games{
     width: 50%;
     margin: auto;
   }
