--- a/src/app/components/guesstheword/guesstheword.component.html
+++ b/src/app/components/guesstheword/guesstheword.component.html
@@ -7,7 +7,7 @@
       Exit
     </button>
 
-    <h1 class="animate__animated animate__fadeInDown animate__slow">Guess The Words</h1>
+    <h1 class="animate__animated animate__fadeInDown animate__slow mt-3">Guess The Words</h1>
 
     <div class="row">
       <div class="col-lg-7 animate__animated animate__fadeInLeft animate__slow">
